--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,7 @@ services:
 
   # Serviço que irá rodar o banco de dados
   db:
+    platform: linux/x86_64
     container_name: one_for_all_db
     image: mysql:8.0.23
     restart: always
